apps/base/memos/service.yml
apiVersion: v1
kind: Service
metadata:
  name: memos
  namespace: memos
spec:
  selector:
    app: memos
  ports:
    - protocol: TCP
      port: 5230
      targetPort: 5230
